Added files and changes required for deployment to heroku

--- a/sms/templates/sms/base.html
+++ b/sms/templates/sms/base.html
@@ -100,7 +100,6 @@ body {
 }
  
 
-
 @keyframes dots-loader {
   0% {
     box-shadow: #f86 -14px -14px 0 7px, #fc6 14px -14px 0 7px, #6d7 14px 14px 0 7px, #4ae -14px 14px 0 7px;
@@ -213,7 +212,7 @@ margin: 2px;
     <a class="" href="{% url 'sms:commentlistview' %}">Feedbacks</a>
     {% endif %}
     
-    <a class="" href="{% url 'sms:logout' %}">Log out</a>
+    <a class="" href="{% url 'account_logout' %}">Log out</a>
     <a class="" href="https://wa.me/message/3WEEV2BGDKKSG1"> Live Help <i class="fas fa-question-circle"></i> </a>
     <a  class="" href="{% url 'sms:feedbackformview' %}">Feedback Form</a>
     <a  class="" href="?"></a>
@@ -232,20 +231,7 @@ margin: 2px;
         <div class="container">
             
             <a class="navbar-brand" href="#page-top"><img src="/static/sms/images/newlogo3.jpg" width="50px" height="50px" alt="..."></a>
-            <div style="color: wheat; text-align: cente">
-                 
-                <script>
-                    Swal.fire({
-                    position: 'top-end',
-                    icon: 'success',
-                    height: 10,
-                    width: 205,
-                    title: 'welcome {{user }}',
-                    showConfirmButton: false,
-                    timer: 5500
-                          })
-                    </script>
-            </div>
+            
             <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <svg class="svg-inline--fa fa-bars fa-w-14 ms-1" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="bars" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" data-fa-i2svg=""><path fill="currentColor" d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path></svg><!-- <i class="fas fa-bars ms-1"></i> Font Awesome fontawesome.com -->
@@ -263,7 +249,8 @@ margin: 2px;
                     <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
                     <hr>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li><hr>
-                    <li class="nav-item"><a class="nav-link" href="{% url 'sms:logout' %}">Log out</a></li>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'account_logout' %}">Log out</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="{% url 'sms:userprofilelistview' %}">My Profile</a></li>
                 </ul>
             </div>
         </div>
@@ -274,7 +261,7 @@ margin: 2px;
     {% endblock %} 
     <!-- Masthead-->
     <!-- <img src="/static/sms/images/bx.jpeg" width="100%" height="500px" alt="..."> -->
-    <header class="masthead" style="background-coor:rgb(16, 2, 37)" >
+    <header class="masthead" >
        
 
       <!-- page statistic-->
@@ -297,7 +284,7 @@ margin: 2px;
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="/static/sms/assets/img/team/2.jpg" alt="...">
+                      <img class="mx-auto rounded-circle" src="/static/sms/assets/img/team/robot.jpeg" alt="...">
                         <h4>Diana Petersen</h4>
                         <p class="text-muted">Lead Marketer</p>
                     
@@ -306,7 +293,7 @@ margin: 2px;
                 </div>
                 <div class="col-lg-4">
                     <div class="team-member">
-                        <img class="mx-auto rounded-circle" src="/static/sms/assets/img/team/3.jpg" alt="...">
+                      <img class="mx-auto rounded-circle" src="/static/sms/assets/img/team/coding.jpeg" alt="...">
                         <h4>Larry Parker</h4>
                         <p class="text-muted">Lead Developer</p>
                           
