--- a/sms/templates/sms/courseslistview.html
+++ b/sms/templates/sms/courseslistview.html
@@ -24,7 +24,7 @@ border: 1px dotted rgb(16, 2, 37);;
 
 
 <section >
-<h1  class="text-center">{{courses_count|length}} : Courses | {{ hitcount.total_hits }}  <i class="fas fa-eye"></i> </h1>
+<h1  class="text-center">{{courses_count|length}} : Courses |  <i class="fas fa-eye"></i> {{ hitcount.total_hits}}  </h1>
 
 <div  class="card text-center">
 
@@ -33,7 +33,7 @@ border: 1px dotted rgb(16, 2, 37);;
     <h1><a style="background-color: rgb(16, 2, 37); width: 100%; color: wheat;" href="{% url 'sms:topicslistview' course.pk %}">{{course.title}}</a></h1><hr>
     <div class="">{% get_hit_count for course %}  <i class="fas fa-eye"></i></div><hr>
     <div>{{course.created}}, {{course.created|timesince}}</div><br>
-  <div>{{course.desc}}</div><hr>
+  <div class="text-left">{{course.desc}}</div><hr>
   {% empty %}
   <h1 class="card text-center text-danger">No Courses Available Yet. CHECK LATER</h1>
   {% endfor %}
