--- a/sms/templates/sms/signup.html
+++ b/sms/templates/sms/signup.html
@@ -3,7 +3,7 @@
     {% load widget_tweaks %}
   
     {% load static %}
-   
+    
     {% load sweetify %}
     {% sweetify %}
 
@@ -57,7 +57,8 @@
                 <div style="background-color: rgb(16, 2, 37);color: wheat;" class=" card-body p-5">
                   <h2 class="text-uppercase text-center mb-5">Create an account</h2><hr>
                  
-
+                  {% block content %}
+                  {% endblock  %}
                   <form style="width: 100%;" class="container "  method="post" enctype="multipart/form-data">
                                
                                {% csrf_token %}
@@ -76,8 +77,8 @@
                         <div class="text-danger">{{error}}</div>
                         {% endfor %}
 
-                      <div class="">{{form.country.label_tag}}</div> 
-                      <div style="width: 100%;" class="w-100">{{form.country}}</div> 
+                      <div>{{form.country.label_tag}}</div> 
+                      <div >{{form.country}}</div> 
                       {% for error in form.country.errors %}
                       <div class="text-danger">{{error}}</div>
                       {% endfor %}
