--- a/sms/templates/sms/topicsdetailview.html
+++ b/sms/templates/sms/topicsdetailview.html
@@ -37,7 +37,7 @@ border: 1px dotted rgb(16, 2, 37);;
   {% if object.img_topic %}
   <div  class="text-left" ><img src="{{object.img_topic.url}}" width="100%" height="500px" alt="topics image"> </div><br><hr>
   {% else %}
-  <div><img src="/static/sms/images/program.jpeg" width="100%" height="500px" alt="topics image"></div><br><hr> 
+  <div><img src="/static/sms/images/newlogo2.jpg" width="100%" height="500px" alt="topics image"></div><br><hr> 
   {% endif %}
   <div  class="text-left" >{{object.desc|linebreaksbr}}</div><br><hr>
   <h3 class="">Activity </h3>
@@ -45,7 +45,7 @@ border: 1px dotted rgb(16, 2, 37);;
   <h3>Evaluation </h3>
   <p class="text-left">{{object.evaluation|linebreaksbr}}</p><br><hr>
   <p>Join Chat Room: {{object.topics_url|urlizetrunc:15}}</p><br><hr>
- 
+
       </div>
     </div>
   </div>
