--- a/sms/templates/sms/topicsdetailview.html
+++ b/sms/templates/sms/topicsdetailview.html
@@ -43,7 +43,8 @@ border: 1px dotted rgb(16, 2, 37);;
   <h3 class="">Activity </h3>
   <p  class="text-left">{{object.student_activity|linebreaksbr}}</p><br><hr>
   <h3>Evaluation </h3>
-  <p class="text-left">{{object.evaluation|linebreaksbr}}</p><br><hr>
+  <!-- <p class="text-left">{{object.evaluation|linebreaksbr}}</p><br><hr> -->
+  
   <p>Join Chat Room: {{object.topics_url|urlizetrunc:15}}</p><br><hr>
 
       </div>
